2005-09-08  Sven Panne  <sven.panne@aedion.de>

	* README: Fixed typo.

	* .cvsignore, configure.ac, Makefile.am: Put all administrative
	files into admin subdirectory.
	
	* .indent.pro, INSTALL, install-sh, mkinstalldirs,
	win_build/alut.dsp, win_build/alut.dsw, win_build/hello_world.dsp:
	Removed.

	* admin/alut.dsp, admin/alut.dsw, admin/.cvsignore,
	admin/hello_world.dsp, admin/.indent.pro: Added.

	* README: Synched with reality.

2005-09-07  Sven Panne  <sven.panne@aedion.de>

	* autogen.sh: Use -Wall for automake to catch some buglets,
	deprecated stuff, etc.

2005-09-03  Sven Panne  <sven.panne@aedion.de>

	* src/alutLoader.c: Merged patches for AU format from Erik Hofman
	<erik@ehofman.com>, including some changes to the original patch.

2005-09-01  Sven Panne  <sven.panne@aedion.de>

	* doc/alut.html, include/AL/alut.h, src/alutError.c,
	src/alutInit.c, src/alutLoader.c, src/alutVersion.c,
	src/alutWaveform.c: Moved internal function prototypes out of the
	public header. Fixed function prototypes, i.e. foo() (C++)
	vs. foo(void) (C).

	* src/alutError.h, src/alutInit.h: Added.

	* .indent.pro, src/alutInit.c, src/alutLoader.c,
	src/alutWaveform.c, test_suite/test_errorstuff.c,
	test_suite/test_fileloader.c, test_suite/test_memoryloader.c,
	test_suite/test_retrostuff.c, test_suite/test_version.c,
	test_suite/test_waveforms.c: Don't use TABs.

	* test_suite/test_fileloader.c, test_suite/test_memoryloader.c,
	test_suite/test_retrostuff.c, test_suite/test_version.c,
	test_suite/test_waveforms.c: Hopefully make the examples compile
	on WinDoze. Play sounds only a finite number of times, which is
	better for automating things.

	* src/alutError.c, src/alutInit.c, src/alutLoader.c,
	src/alutVersion.c, src/alutWaveform.c,
	test_suite/test_errorstuff.c, test_suite/test_fileloader.c,
	test_suite/test_memoryloader.c, test_suite/test_retrostuff.c,
	test_suite/test_version.c, test_suite/test_waveforms.c:
	Reformatted conforming to GNU standards. Please keep it that